--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,14 @@ argparse = "^1.4.0"
 pytest = {version = "^6.1.0", optional = true}
 pytest-cov = {version = "^2.10.1", optional = true}
 behave = "^1.2.6"
+fastapi = "^0.75.1"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
 pylint = "^2.6.0"
 mypy = "^0.942"
 flake8 = "^3.8.3"
-black = "21.10b0"
+black = "22.3.0"
 pre-commit = "^2.7.1"
 bandit = "^1.7.0"
 bump2version = "^1.0.1"
