--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -5,12 +5,15 @@ jobs:
   linter:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: pip install nox
-    - name: Run cop session
-      run: nox --sessions cop
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Fix up git URLs
+        run: echo -e '[url "https://github.com/"]\n  insteadOf = "git://github.com/"' >> ~/.gitconfig
+      - name: Install dependencies
+        run: pip install nox
+      - name: Run cop session
+        run: nox --sessions cop
