--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           args: deploy --dir=build --prod
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: 'spotifiuba'
+          heroku_app_name: 'spotifiuba-usuario'
           heroku_email: 'lkasman@fi.uba.ar'
