--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,23 @@
-*.swp
-*.*~
-project.lock.json
-.DS_Store
+.vscode/
+.vscode/*
+.idea/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+*.lock
 *.pyc
-nupkg/
-
-# Visual Studio Code
-.vscode
-
-# Rider
-.idea
-
-# User-specific files
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
-
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-build/
-bld/
-[Bb]in/
-[Oo]bj/
-[Oo]ut/
-msbuild.log
-msbuild.err
-msbuild.wrn
-__pycache__/
 Pipfile
-venv-usuarios/*
+.DS_Store
+*.txt
+__pycache__/
+
+# Local History for Visual Studio Code
+.history/
+venv/
+envSpotifiuby/
+venv-usuarios/
+pre-commit/
 .nox/*
+.env
