--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@ repos:
 -   repo: local
     hooks:
     - id: isort
+      args: ["--profile", "black"]
       name: isort
       entry: poetry run isort
       language: system
