--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = {version = "^6.1.0", optional = true}
 pytest-cov = {version = "^2.10.1", optional = true}
 behave = "^1.2.6"
 fastapi = "^0.75.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
