--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,55 @@
-alembic==1.7.7
 anyio==3.5.0
-asgiref==3.5.0
+argcomplete==1.12.3
+astroid==2.11.2
+bandit==1.7.4
+behave==1.2.6
+black==22.3.0
+bump2version==1.0.1
+cfgv==3.3.1
 click==8.1.2
-dnspython==2.2.1
-email-validator==1.1.3
+colorlog==4.8.0
+dill==0.3.4
+distlib==0.3.4
 fastapi==0.75.1
 FastAPI-SQLAlchemy==0.2.1
-greenlet==1.1.2
-h11==0.13.0
+filelock==3.6.0
+flake8==3.9.2
+gitdb==4.0.9
+GitPython==3.1.27
+gunicorn==20.1.0
+identify==2.4.12
 idna==3.3
-Mako==1.2.0
-MarkupSafe==2.1.1
-poetry==1.1.12
-psycopg2==2.9.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+mypy==0.942
+mypy-extensions==0.4.3
+nodeenv==1.6.0
+nox==2020.12.31
+packaging==21.3
+parse==1.19.0
+parse-type==0.6.0
+pathspec==0.9.0
+pbr==5.8.1
+platformdirs==2.5.1
+pre-commit==2.18.1
+py==1.11.0
+pycodestyle==2.7.0
 pydantic==1.9.0
+pyflakes==2.3.1
+pylint==2.13.5
+pyparsing==3.0.8
 python-dotenv==0.20.0
+PyYAML==6.0
+six==1.16.0
+smmap==5.0.0
 sniffio==1.2.0
-SQLAlchemy==1.4.35
+SQLAlchemy==1.3.24
+SQLAlchemy-Utils==0.36.8
 starlette==0.17.1
+stevedore==3.5.0
+toml==0.10.2
+tomli==2.0.1
 typing-extensions==4.1.1
-uvicorn==0.17.6
+virtualenv==20.14.1
+wrapt==1.14.0
