--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,10 @@
 build:
   docker:
     web: Dockerfile
+release:
+  image: web
+  command:
+    - poetry run alembic revision --autogenerate -m "New Migration"
+    - poetry run alembic upgrade head
+run:
+  web: gunicorn -w 1 -k uvicorn.workers.UvicornWorker main:app
