add alembic stamp to heroku.yml

--- a/heroku.yml
+++ b/heroku.yml
@@ -4,6 +4,7 @@ build:
 release:
   image: web
   command:
+    - poetry run alembic stamp head
     - poetry run alembic revision --autogenerate -m "New Migration"
     - poetry run alembic upgrade head
 run:
