Fixing login endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,5 @@ services:
     depends_on:
       - db
     restart: always
-    environment:
-      - DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/spotifiuby
+    env_file:
+      - .env
