--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ behave = "^1.2.6"
 fastapi = "^0.75.1"
 gunicorn = "^20.1.0"
 psycopg2 = "^2.9.3"
+pydantic = {extras = ["email"], version = "^1.9.0"}
+alembic = "^1.7.7"
+FastAPI-SQLAlchemy = "^0.2.1"
+uvicorn = "^0.17.6"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
