--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       types: [python]
       stages: [commit]
       # args: [--load-plugins, ]
-      # exclude:
+      exclude: alembic/versions/*
 -   repo: git://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
