--- a/heroku.yml
+++ b/heroku.yml
@@ -6,4 +6,4 @@ release:
   command:
     - alembic upgrade head
 run:
-  web: gunicorn -w 1 -k uvicorn.workers.UvicornWorker main:app
+  web: gunicorn -w 1 -k uvicorn.workers.UvicornWorker app.main:app
