--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -3,6 +3,10 @@ name: Deployer
 on:
   push:
     branches: [ master ]
+  workflow_run:
+    workflows: ["Tests"]
+    types:
+      - completed
 
 permissions:
   contents: read
