--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ behave = "^1.2.6"
 fastapi = "^0.75.1"
 gunicorn = "^20.1.0"
 psycopg2 = "^2.9.3"
+passlib = "^1.7.4"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.5"
+firebase-admin = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
