--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pydantic = {extras = ["email"], version = "^1.9.0"}
 alembic = "^1.7.7"
 FastAPI-SQLAlchemy = "^0.2.1"
 uvicorn = "^0.17.6"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
