--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ alembic = "^1.7.7"
 FastAPI-SQLAlchemy = "^0.2.1"
 uvicorn = "^0.17.6"
 python-dotenv = "^0.20.0"
+types-requests = "^2.27.25"
 
 [tool.poetry.dev-dependencies]
 nox = "^2020.8.22"
