Refactor creation of the wallet

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ POSTGRES_SERVER=db
 FIREBASE_WEB_API_KEY="AIzaSyBDuRrmRnpkTm6g3HsVCnXKhgZN1y-zZgU"
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 DATABASE_URL=postgresql+psycopg2://postgres:password@db:5432/spotifiuby
+TRANSACTIONS_URL='https://spotifiuby-pagos.herokuapp.com'
