--- a/.github/workflows/pre-deploy-hooks.yml
+++ b/.github/workflows/pre-deploy-hooks.yml
@@ -28,8 +28,13 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: pip install nox
-      - name: Run cop session
+      - name: Run test session
         run: nox --sessions tests
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3.1.0
+        with:
+          # token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
   bandit:
     runs-on: ubuntu-latest
     steps:
