--- a/.github/workflows/pre-deploy-hooks.yml
+++ b/.github/workflows/pre-deploy-hooks.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3.1.0
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN_USUARIOS }}
           verbose: true
   bandit:
     runs-on: ubuntu-latest
