--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,104 @@
 alembic==1.7.7
-anyio==3.5.0
-asgiref==3.5.1
+anyio==3.6.1
+argcomplete==1.12.3
+asgiref==3.5.2
+astroid==2.11.5
+bandit==1.7.4
+behave==1.2.6
+black==22.3.0
+bump2version==1.0.1
 CacheControl==0.12.11
-cachetools==5.0.0
-certifi==2021.10.8
+cachetools==5.1.0
+certifi==2022.5.18.1
 cffi==1.15.0
+cfgv==3.3.1
 charset-normalizer==2.0.12
 click==8.1.3
-cryptography==37.0.2
+colorlog==4.8.0
+cryptography==3.4
+dill==0.3.5
+distlib==0.3.4
 dnspython==2.2.1
 ecdsa==0.17.0
 email-validator==1.2.1
-fastapi==0.77.0
+fastapi==0.75.2
 FastAPI-SQLAlchemy==0.2.1
+filelock==3.7.0
 firebase-admin==5.2.0
-google-api-core==2.7.3
-google-api-python-client==2.47.0
+flake8==3.9.2
+gitdb==4.0.9
+GitPython==3.1.27
+google-api-core==2.8.0
+google-api-python-client==2.48.0
 google-auth==2.6.6
 google-auth-httplib2==0.1.0
 google-cloud-core==2.3.0
-google-cloud-firestore==2.4.0
+google-cloud-firestore==2.5.0
 google-cloud-storage==2.3.0
 google-crc32c==1.3.0
-google-resumable-media==2.3.2
-googleapis-common-protos==1.56.0
-greenlet==1.1.2
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.1
 grpcio==1.46.1
 grpcio-status==1.46.1
+gunicorn==20.1.0
 h11==0.13.0
 httplib2==0.20.4
+identify==2.5.1
 idna==3.3
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+isort==5.10.1
+lazy-object-proxy==1.7.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+mccabe==0.6.1
 msgpack==1.0.3
+mypy-extensions==0.4.3
+nodeenv==1.6.0
+nox==2020.12.31
+parse==1.19.0
+parse-type==0.6.0
 passlib==1.7.4
-poetry==1.1.12
-proto-plus==1.20.3
+pathspec==0.9.0
+pbr==5.9.0
+platformdirs==2.5.2
+pre-commit==2.19.0
+proto-plus==1.20.4
 protobuf==3.20.1
 psycopg2==2.9.3
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.7.0
 pycparser==2.21
-pydantic==1.9.0
+pydantic==1.9.1
+pyflakes==2.3.1
+pylint==2.13.9
 pyparsing==3.0.9
 python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
+PyYAML==6.0
 requests==2.27.1
 rsa==4.8
+semantic-version==2.9.0
+setuptools-rust==1.3.0
 six==1.16.0
+smmap==5.0.0
 sniffio==1.2.0
-SQLAlchemy==1.4.36
-starlette==0.19.0
+SQLAlchemy==1.3.24
+SQLAlchemy-Utils==0.36.8
+starlette==0.17.1
+stevedore==3.5.0
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.1
+types-requests==2.27.27
+types-urllib3==1.26.14
 typing-extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.6
+virtualenv==20.14.1
+wrapt==1.14.1
+zipp==3.8.0
